<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.yelelen.sfish.frags.PermissionFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:textAlignment="center"
            app:title="@string/title_assist_permissions"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="@color/colorAccent" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/len_92"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="120dp"
                android:layout_height="@dimen/len_44"
                android:background="@drawable/shape_button"
                android:text="@string/label_permission"
                android:textSize="@dimen/font_16"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/len_8"
                android:layout_marginBottom="@dimen/len_8"/>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_network"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_network_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_network"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_marginTop="@dimen/len_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_read_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_read"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_marginTop="@dimen/len_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_write"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_write_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_write"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_marginTop="@dimen/len_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_network_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_network_status_des"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_network_status"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_marginTop="@dimen/len_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_record"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_record_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_record"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

            <FrameLayout
                android:padding="@dimen/len_6"
                android:layout_marginTop="@dimen/len_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_location_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/im_state_permission_location"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:src="@drawable/ic_done"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end|center_vertical"
                    android:tint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/len_4"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

